syntax = "proto3";

package wishgrpc;

import "google/api/annotations.proto";

service WishListService {
    rpc Create (CreateWishListReq) returns (CreateWishListResp) {
        option (google.api.http) = {
                post: "/v1/wishlist"
                body: "wish_list"
    };
    }
    rpc Add (AddItemReq) returns (AddItemResp) {
        option (google.api.http) = {
            post: "/v1/wishlist/{wishList_id}/item"
            body: "item"
    };
    }
    rpc List (ListWishListReq) returns (ListWishListResp) {
        option (google.api.http) = {
            get: "/v1/wishlist/{wishList_id}"
    };
    }
}

message Item {
    enum ItemPriority {
        LOW = 0;
        MID = 50;
        HIGH = 100;
    }

    enum ItemStatus {
        INACTIVE = 0;
        ACTIVE = 1;
    }

    string id = 1;
    string wishList_id = 2;
    string name = 3;
    string link = 4;
    double price = 5;
    ItemPriority priority = 6;
    ItemStatus status = 7;
}

message WishList {
    enum WishListStatus {
        INACTIVE = 0;
        ACTIVE = 1;
    }

    string id = 1;
    string name = 2;
    WishListStatus status = 3;
}

message CreateWishListReq {
    WishList wish_list = 1;
}

message CreateWishListResp {
    string wishList_id = 1;
}

message AddItemReq {
    string wishList_id = 1;
    Item item = 2;
}

message AddItemResp {
    string item_id = 1;
}

message ListWishListReq {
    string wishList_id = 1;
}

message ListWishListResp {
    repeated Item items = 1;
}